<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/external_background"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:text="@string/text13"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/upload_photo_background" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingStart="88dp"
            android:paddingEnd="88dp"
            android:text="@string/text14"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#707070"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <LinearLayout
            android:layout_width="254dp"
            android:layout_height="146dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5">

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp"
                card_view:cardBackgroundColor="@android:color/transparent">

                <ImageView
                    android:id="@+id/licenseView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="matrix" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/validLicenseButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/white_button_with_gray_border"
            android:fontFamily="@font/roboto"
            android:paddingStart="2dp"
            android:paddingTop="-4dp"
            android:paddingEnd="2dp"
            android:paddingBottom="4dp"
            android:text="@string/text15"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#707070"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:icon="@drawable/upload_photo_button"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="20dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_button_small"
            android:fontFamily="@font/roboto"
            android:paddingStart="-4dp"
            android:paddingTop="-2dp"
            android:paddingEnd="-2dp"
            android:text="@string/text1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/gray_button_small"
            android:fontFamily="@font/roboto"
            android:paddingStart="-4dp"
            android:paddingTop="-2dp"
            android:paddingEnd="-2dp"
            android:text="@string/text16"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="@+id/uploadButton"
            app:layout_constraintTop_toBottomOf="@+id/uploadButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>