<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/internal_background"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/handed_fare_background" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text241"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView36"
            app:layout_constraintTop_toTopOf="@+id/imageView36" />

        <TextView
            android:id="@+id/selectedOriginRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text242"
            android:textColor="#B2FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView36"
            app:layout_constraintTop_toBottomOf="@+id/textView50" />

        <ImageView
            android:id="@+id/textBox51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="@+id/imageView36"
            app:layout_constraintTop_toBottomOf="@+id/selectedOriginRoute"
            app:srcCompat="@drawable/white_textbox_line_thick" />

        <Spinner
            android:id="@+id/routeOriginSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownSelector="@android:drawable/spinner_background"
            android:entries="@array/transactionroute_origin"
            android:spinnerMode="dialog"
            android:textSize="15sp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@+id/routeOriginButton"
            app:layout_constraintEnd_toStartOf="@+id/routeOriginButton" />

        <ImageButton
            android:id="@+id/routeOriginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/dropdown_button"
            app:layout_constraintBottom_toBottomOf="@+id/textBox51"
            app:layout_constraintEnd_toEndOf="@+id/textBox51" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text243"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView36"
            app:layout_constraintTop_toBottomOf="@+id/textBox51" />

        <TextView
            android:id="@+id/selectedDestinationRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text244"
            android:textColor="#B2FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView36"
            app:layout_constraintTop_toBottomOf="@+id/textView52" />

        <ImageView
            android:id="@+id/textBox53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="@+id/imageView36"
            app:layout_constraintTop_toBottomOf="@+id/selectedDestinationRoute"
            app:srcCompat="@drawable/white_textbox_line_thick" />

        <Spinner
            android:id="@+id/routeDestinationSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownSelector="@android:drawable/spinner_background"
            android:entries="@array/transactionroute_destination"
            android:spinnerMode="dialog"
            android:textSize="15sp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@+id/routeDestinationButton"
            app:layout_constraintEnd_toStartOf="@+id/routeDestinationButton" />

        <ImageButton
            android:id="@+id/routeDestinationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/dropdown_button"
            app:layout_constraintBottom_toBottomOf="@+id/textBox53"
            app:layout_constraintEnd_toEndOf="@+id/textBox53" />

        <Button
            android:id="@+id/selectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button_small"
            android:layout_marginEnd="140dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingStart="-2dp"
            android:paddingTop="-2dp"
            android:paddingEnd="-2dp"
            android:text="@string/text1"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textIsSelectable="false"
            android:textSize="15sp"
            android:textStyle="bold"
            app:backgroundTint="#1C3D67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView36" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_button_small"
            android:layout_marginStart="140dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingStart="-2dp"
            android:paddingTop="-2dp"
            android:paddingEnd="-2dp"
            android:text="@string/text216"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textIsSelectable="false"
            android:textSize="15sp"
            android:textStyle="bold"
            app:backgroundTint="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView36" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/back_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>